--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -43,6 +43,8 @@
     <string name="tank">Tank</string>
     <string name="support">Support</string>
 
+    <string name="strFilterHero">Voir les héros !</string>
+
     <!-- Summary -->
     <string name="genji_summary">Genji lance des shurikens précis et mortels sur ses cibles, et utilise son katana à la pointe de la technologie pour dévier les projectiles ou exécuter une Frappe du vent qui blesse sérieusement ses ennemis.</string>
     <string name="mccree_summary">Armé de son Pacificateur, McCree abat ses cibles avec une précision redoutable et se met à couvert plus vite que son ombre.</string>
