--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -38,12 +38,14 @@
     <string name="strBaseOperation">Base d\'opération : &#160;</string>
     <string name="strAffiliation">Affiliation : &#160;</string>
 
-    <string name="offense">Attaque</string>
-    <string name="defense">Defense</string>
-    <string name="tank">Tank</string>
-    <string name="support">Support</string>
+    <string name="strOffense">Attaque</string>
+    <string name="strDefense">Defense</string>
+    <string name="strTank">Tank</string>
+    <string name="strSupport">Support</string>
 
     <string name="strFilterHero">Voir les héros !</string>
+
+    <string name="strDescription">Description</string>
 
     <!-- Summary -->
     <string name="genji_summary">Genji lance des shurikens précis et mortels sur ses cibles, et utilise son katana à la pointe de la technologie pour dévier les projectiles ou exécuter une Frappe du vent qui blesse sérieusement ses ennemis.</string>
