--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -47,6 +47,14 @@
     <string name="strHeroes">Héros</string>
     <string name="strMaps">Cartes</string>
     <string name="strDescription">Description</string>
+    <string name="strBuyNow">Acheter maintenant</string>
+    <string name="urlBuy">https://playoverwatch.com/fr-fr/buy/</string>
+
+    <string name="gameIntro">L’AVENIR N’ATTEND PAS\n\n
+        Soldats. Scientifiques. Aventuriers. Marginaux.\n\n
+Dans une période de crise mondiale, des héros venus de tous les horizons ont composé une équipe d’intervention internationale pour ramener la paix dans un monde déchiré par la guerre : OVERWATCH.\n\n
+Cette organisation a mis fin à la crise et préservé la paix pendant les décennies suivantes, inspiré une ère d’exploration, d’innovation et de découvertes. \n\n
+Aujourd’hui, le conflit s’étend à nouveau au monde entier… Répondrez-vous à l’appel qui a été lancé ?</string>
 
     <!-- Summary -->
     <string name="genji_summary">Genji lance des shurikens précis et mortels sur ses cibles, et utilise son katana à la pointe de la technologie pour dévier les projectiles ou exécuter une Frappe du vent qui blesse sérieusement ses ennemis.</string>
