--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,14 @@
     <string name="strHeroes">Heroes</string>
     <string name="strMaps">Maps</string>
     <string name="strDescription">Description</string>
+    <string name="strBuyNow">Buy now</string>
+    <string name="urlBuy">https://playoverwatch.com/en-us/buy/</string>
+
+    <string name="gameIntro">FIGHT FOR THE FUTURE\n\n
+        Soldiers. Scientists. Adventurers. Oddities.\n\n
+In a time of global crisis, an international task force of heroes banded together to restore peace to a war-torn world: OVERWATCH.\n\n
+Overwatch ended the crisis, and helped maintain peace in the decades that followed, inspiring an era of exploration, innovation, and discovery. But, after many years, Overwatch’s influence waned, and it was eventually disbanded.\n\n
+Now, conflict is rising across the world again, and the call has gone out to heroes old and new. Are you with us?</string>
 
     <!-- Summary -->
     <string name="genji_summary">Genji lance des shurikens précis et mortels sur ses cibles, et utilise son katana à la pointe de la technologie pour dévier les projectiles ou exécuter une Frappe du vent qui blesse sérieusement ses ennemis.</string>
