--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,9 @@
     <string name="strBuyNow">Buy now</string>
     <string name="urlBuy">https://playoverwatch.com/en-us/buy/</string>
 
+    <string name="strLocation">Location :</string>
+    <string name="strGameMode">Game mode :</string>
+
     <string name="gameIntro">FIGHT FOR THE FUTURE\n\n
         Soldiers. Scientists. Adventurers. Oddities.\n\n
 In a time of global crisis, an international task force of heroes banded together to restore peace to a war-torn world: OVERWATCH.\n\n
