--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -43,6 +43,10 @@
     <string name="strTank">Tank</string>
     <string name="strSupport">Support</string>
 
+    <string name="strGeneralities">Generalités</string>
+    <string name="strStory">Histoire</string>
+    <string name="strEasterEggs">Easter Eggs</string>
+
     <string name="strFilterHero">Voir les héros !</string>
     <string name="strHeroes">Héros</string>
     <string name="strMaps">Cartes</string>
@@ -52,6 +56,8 @@
 
     <string name="strLocation">Localisation :</string>
     <string name="strGameMode">Mode de jeu :</string>
+
+    <string name="strBackground">Histoire</string>
 
     <string name="gameIntro">L’AVENIR N’ATTEND PAS\n\n
         Soldats. Scientifiques. Aventuriers. Marginaux.\n\n
