--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -69,6 +69,9 @@
 
     <string name="strBackground">Histoire</string>
 
+    <string name="strNoFavoritesHeroes">Pas de héros favoris !</string>
+    <string name="strNoFavoritesMaps">Pas de cartes favorites !</string>
+
     <string name="gameIntro">L’AVENIR N’ATTEND PAS\n\n
         Soldats. Scientifiques. Aventuriers. Marginaux.\n\n
 Dans une période de crise mondiale, des héros venus de tous les horizons ont composé une équipe d’intervention internationale pour ramener la paix dans un monde déchiré par la guerre : OVERWATCH.\n\n
