--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,9 @@
     <string name="langFr">French</string>
     <string name="langEn">English</string>
 
+    <string name="strApply">Apply</string>
+    <string name="strCancel">Cancel</string>
+
     <string name="gameIntro">FIGHT FOR THE FUTURE\n\n
         Soldiers. Scientists. Adventurers. Oddities.\n\n
 In a time of global crisis, an international task force of heroes banded together to restore peace to a war-torn world: OVERWATCH.\n\n
